--- a/emnlp2018.bib
+++ b/emnlp2018.bib
@@ -1,13 +1,3 @@
-@book{Aho:72,
-    author  = {Alfred V. Aho and Jeffrey D. Ullman},
-    title   = {The Theory of Parsing, Translation and Compiling},
-    year    = "1972",
-    volume  = "1",
-    publisher = {Prentice-Hall},
-    address = {Englewood Cliffs, NJ}
-}
-
-
 @inproceedings{chen2016infogan,
   title = {Infogan: {{Interpretable}} Representation Learning by Information Maximizing Generative Adversarial Nets},
   shorttitle = {Infogan},
@@ -199,12 +189,13 @@
   year={2016}
 }
 
-@article{he-2017,
+@inproceedings{he-2017,
   title={An Unsupervised Neural Attention Model for Aspect Extraction},
   author={He, Ruidan and Lee, Wee Sun and Ng, Hwee Tou and Dahlmeier, Daniel},
   booktitle={Proceedings of the Association for Computational Linguistics (ACL)},
   year={2017},
   pages={388--397},
+  organization={Association for Computational Linguistics}
 }
 
 
